--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
     min-width: 300px;
     border: solid 2px #cf3c86; 
   }
+
+  .btn-botones-cmpi-big {
+    color: #ffffff;
+    background-color: #CF3C86;
+    border-radius: 25px;
+    font-size: 1.2rem;
+    padding: 50px 200px;
+    font-weight: 800;
+    margin: 20px 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    min-width: 300px;
+  }
+  .btn-botones-cmpi-big:hover{
+      transform: scale(1.1);
+      background-color: #8675f7;
+      color: #FAFAFA;
+  }
   
   #svg_doctora_cempi{
       position: relative;
@@ -601,9 +618,9 @@
           Estamos comprometidos en mejorar el acceso a la salud en México, y queremos colaborar contigo para llevar un Centro de Medicina Preventiva Integral (CMPI) a tu comunidad. Si representas a una organización, gobierno local o colectivo, completa el siguiente formulario y nos pondremos en contacto contigo:
         </p>
       </div>
-      <div class="col-12 col-lg-8 container-form-contacto-cempi">
+      <!--<div class="col-12 col-lg-8 container-form-contacto-cempi">
 
-<form class="form-cempi-contacto" action="/es/enviar_formulario_cempi" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="zFU9YvdzvRf0PA7Ug3vZyHwBi11+SeIBPtjL6PKc8dEsced8oVl3OCFKjo6xVGr/+qDCBYMai8Vi8Dg+ITGYVg==" autocomplete="off"><input name="_usec" type="hidden" value="889994">
+ <form class="form-cempi-contacto" action="/es/enviar_formulario_cempi" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="zFU9YvdzvRf0PA7Ug3vZyHwBi11+SeIBPtjL6PKc8dEsced8oVl3OCFKjo6xVGr/+qDCBYMai8Vi8Dg+ITGYVg==" autocomplete="off"><input name="_usec" type="hidden" value="889994">
   <div class="row">
     <h5 class="title-grupo-form">DATOS GENERALES</h5>
     <div class="form-group form-group-cempi col-12">
@@ -760,7 +777,14 @@
         });
     });
 </script>
+      </div>-->
+
+
+      <div class="col-12 col-md-10 d-flex justify-content-center align-items-center flex-wrap">
+        <a href="#objetivos" class="btn btn-botones-cmpi-big">CONTACTANOS</a>
       </div>
+
+
     </div>
   </div>
 </section>
