--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <section id="tipos_cempi" class="row p-3 mb-5 d-flex justify-content-center">
     <div class="col-12 col-xxl-8">
-      <h1 class="title-section-cempi mt-4 mb-4">TIPOS DE CMPI</h1>
+      <h1 class="title-section-cempi mt-4 mb-4" style="background-color: rgba(250, 250, 250, 0.9);padding: 10px;text-align: center;border-radius: 10px;">TIPOS DE CMPI</h1>
       <div class="lista-tipos-cempi col-12">
         <div class="item-tipo-cempi">
           <div class="title-item-cempi">CENTRO DE MEDICINA PREVENTIVA INTEGRAL BASICO:</div>
@@ -308,7 +308,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
@@ -330,7 +330,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
@@ -352,7 +352,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
@@ -374,7 +374,7 @@
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
           It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
           and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-        <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+        <img src="BACK.png" class="img-fluid">
       </div>
     </div>
   </div>
@@ -396,7 +396,7 @@
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
           It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
           and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-        <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+        <img src="BACK.png" class="img-fluid">
       </div>
     </div>
   </div>
@@ -419,7 +419,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
@@ -442,7 +442,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
@@ -465,7 +465,7 @@
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-          <iframe src="https://www.youtube.com/embed/emBJYQAnb8Q" title="CMPI" loading="lazy" allowfullscreen></iframe>
+          <img src="BACK.png" class="img-fluid">
         </div>
       </div>
     </div>
