--- a/formulario_contacto.html
+++ b/formulario_contacto.html
@@ -32,7 +32,8 @@
   <nav class="main-menu">
     <ul>
       <li><a href="index.html">INICIO</a></li>
-      <li><a href="formulario_contacto.html">CONTACTO</a></li>
+      <li><a href="alternativa.html">ALTERNATIVA</a></li>
+      <li><a href="formulario_contacto.html">CONTACTO</a></li>      
     </ul>
   </nav>
 
